<?xml version="1.0"?>
<package format="2">
  <name>cilantro</name>
  <version>0.0.1</version>
  <description>The cilantro package</description>

  <maintainer email="info@pickit3d.com">Pick-it NV</maintainer>
  <license>Closed</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>eigen</depend>

</package>
